--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,15 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h1 id="username"><%= @user.username %> Profile</h1>
-      <p id="email"><%= @user.email %></p>
-      <p id="biography"><%= @user.biography %></p>
-    </div>
-  </div
+<div class="row">
+  <div class="col-xs-12">
+    <h1 id="username"><%= @user.username %>'s Profile</h1>
+    <p id="email">Email: <%= @user.email %></p>
+    <p id="biography">Auto-Biography: <%= @user.biography %></p>
+  </div>
+</div>
+
+</br>
+
+<div class="row">
+  <div class="col-xs-12">
+    <%= link_to "Edit Profile", edit_user_registration_path(@user), id: "edit_user_link" %>
+  </div>
 </div>
