--- a/app/views/achievements/edit.html.erb
+++ b/app/views/achievements/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Achievements#edit</h1>
-<p>Find me in app/views/achievements/edit.html.erb</p>
+<h1>Edit Achievement</h1>
+
+<%= render 'form' %>
+
+<div class="form-group">
+  <%= link_to "Cancel", achievement_path, class: 'btn btn-primary' %>
+</div>
