--- a/app/views/achievements/index.html.erb
+++ b/app/views/achievements/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Achievements#index</h1>
-<p>Find me in app/views/achievements/index.html.erb</p>
+<h1>All Achievements</h1>
+
+<div class="row">
+  <div class="col-xs-12">
+    <% @achievements.each do |achievement| %>
+      <p><%= link_to(achievement.title, achievement) %></p>
+      <p><%= achievement.description %></p>
+      <p><strong>Points: </strong><%= achievement.points %></p>
+    <% end %>
+  </div>
+</div>
+
+
