--- a/app/views/achievements/new.html.erb
+++ b/app/views/achievements/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Achievements#new</h1>
-<p>Find me in app/views/achievements/new.html.erb</p>
+<h1>New Achievement</h1>
+
+  <%= render 'form' %>
