--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Get Started</a></li>
           <% if user_signed_in? %>
+            <li><%= link_to "Create New Achievement", new_achievement_path %></li>
             <li><%= link_to "Sign Out", destroy_user_session_path,
                             method: :delete %></li>
           <% else %>
