--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <%= link_to "Edit Profile", edit_user_registration_path(@user), id: "edit_user_link" %>
+    <%= link_to "Edit Profile", edit_user_registration_path(@user), id: "edit_user_link", class: "btn btn-primary" %>
+    <%= link_to "View Achievements", achievements_path, class: "btn btn-primary" %>
   </div>
 </div>
